// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all props 1`] = `
<main
  className="govuk-main-wrapper lbh-main-wrapper class1 class2"
  id="test"
  role="main"
>
  Test
</main>
`;

exports[`renders correctly without optional props 1`] = `
<main
  className="govuk-main-wrapper lbh-main-wrapper"
  id="main-content"
  role="main"
>
  Test
</main>
`;
